--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,6 +12,7 @@ html
 		script(src='/js/fastclick.js')
 		script(src='/js/webgl-heatmap.js')
 		link(rel='stylesheet', href='/css/site.css')
+		link(href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet')
 		block scripts
 	body
 		div(class='container')
