--- a/views/index.pug
+++ b/views/index.pug
@@ -35,6 +35,12 @@ block content
 							option 701
 
 					div(class='form-group')
+						label(for='matchTypeSelect') Game Mode
+						select(class='form-control' name='gameType' id='gameTypeSelect')
+							each gameType in gameTypes
+								option(value=gameType.matches_required)=gameType.name
+
+					div(class='form-group')
 						label(for='matchStakeSelect') Match Stake
 						select(class='form-control' name='matchStake' id='matchStakeSelect')
 							option(value=undefined) -
