--- a/views/playerComparison.pug
+++ b/views/playerComparison.pug
@@ -38,7 +38,7 @@ block content
 				tr
 					td(class='col-sm-2') Checkout%
 					each player in players
-						td= (player.gamesWon * 100 / player.checkoutAttempts).toFixed(2) + '%'
+						td= (player.gamesWon * 100 / player.checkoutAttempts === undefined ? 0 : player.checkoutAttempts).toFixed(2) + '%'
 				tr
 					td(class='col-sm-2') Highest Checkout
 					each player in players
