Defined model relations in game and game type

--- a/views/matches.pug
+++ b/views/matches.pug
@@ -34,9 +34,10 @@ block content
 					th(hidden=true)
 					th Start Time
 					th End Time
-					th Game Type
+					th Match Type
 					th Winner
 					th Players
+					th Game type
 					th Results
 			tbody
 				each match in matches
@@ -54,6 +55,7 @@ block content
 							each player in match.players
 								div(style='margin-bottom: 5px;')
 									span(class='label label-info' style='line-height: inherit;')=player.name
+						td(class='col-sm-1 txt-center')= match.game.game_type.name
 						td(class='col-sm-2')
 							if !match.is_finished
 								button(type='button' id='continueMatchButton' class='btn btn-primary btn-block btn-continue-match') Continue
