Added data to results page

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -151,3 +151,8 @@ a:hover {
     background-repeat: no-repeat;
     background-image: url(../images/vilius.png);
 }
+
+.mt-30
+{
+    margin-top: 30px;
+}
