--- a/views/results.pug
+++ b/views/results.pug
@@ -181,12 +181,12 @@ block content
 							p= statistics['100s_plus'] === 0 ? "" : "100+: " + statistics['100s_plus']
 							p= statistics['140s_plus'] === 0 ? "" : "140+: " + statistics['140s_plus']
 							p= statistics['180s'] === 0 ? "" : "180:  " + statistics['180s']
-
 						if match.winner_id !== undefined && player.id === match.winner_id
 							td
 								span(class='glyphicon glyphicon-ok' aria-hidden='true')
 						else
 							td
+								p= player.remaining_score + ' left'
 	div(style='margin-bottom: 20px;')
 		if match.winner_id === null
 			button(type='button' class='btn btn-primary' id='continue-match' data-match=match.id) Continue match
