--- a/views/results.pug
+++ b/views/results.pug
@@ -126,6 +126,9 @@ block scripts
 			$('#continue-match').click(function () {
 				location.href = '/match/' + $(this).data('match');
 			});
+			$('#continue-game').click(function () {
+				location.href = '/game/' + $(this).data('game') + '/match/' + $(this).data('match');
+			});
 		});
 	script.
 		var size = 20;
@@ -150,7 +153,7 @@ block content
 		if match.winner_id === null
 			button(type='button' class='btn btn-primary pull-right mt-30' id='continue-match' data-match=match.id) Continue match
 		else if game.is_finished === 0
-			button(type='button' class='btn btn-primary pull-right mt-30' id='continue-game' data-game=game.id) Continue game
+			button(type='button' class='btn btn-primary pull-right mt-30' id='continue-game' data-game=game.id data-match=match.id) Continue game
 
 	p.
 		ID: #{match.id} <br>
@@ -177,16 +180,16 @@ block content
 						td
 							p= player.name
 						td
-							p= statistics.darts_thrown
+							//p= statistics.darts_thrown
 						td
-							p= statistics.first_nine_ppd.toFixed(2)
+							//p= statistics.first_nine_ppd.toFixed(2)
 						td
-							p= statistics.ppd.toFixed(2)
+							//p= statistics.ppd.toFixed(2)
 						td
-							p= statistics['60s_plus'] === 0 ? "" : "60+: " + statistics['60s_plus']
-							p= statistics['100s_plus'] === 0 ? "" : "100+: " + statistics['100s_plus']
-							p= statistics['140s_plus'] === 0 ? "" : "140+: " + statistics['140s_plus']
-							p= statistics['180s'] === 0 ? "" : "180:  " + statistics['180s']
+							//p= statistics['60s_plus'] === 0 ? "" : "60+: " + statistics['60s_plus']
+							//p= statistics['100s_plus'] === 0 ? "" : "100+: " + statistics['100s_plus']
+							//p= statistics['140s_plus'] === 0 ? "" : "140+: " + statistics['140s_plus']
+							//p= statistics['180s'] === 0 ? "" : "180:  " + statistics['180s']
 
 						if match.winner_id !== undefined && player.id === match.winner_id
 							td
