--- a/views/layout.pug
+++ b/views/layout.pug
@@ -31,5 +31,6 @@ html
 								li: a(href='/player/list') Players
 								li: a(href='/cake/owes') Owes
 								li: a(href='/match/list') Matches
+								li: a(href='/game/list') Games
 			div(class='jumbotron')
 				block content
