--- a/views/games.pug
+++ b/views/games.pug
@@ -13,8 +13,8 @@ block scripts
 		});
 	script.
 		$(function() {
-			$('.btn-continue-game').click(function() {
-				window.location.href = '/match/' + $(this).data('match');
+			$('.btn-continue-game').click(function () {
+				location.href = '/game/' + $(this).data('game') + '/match/' + $(this).data('match');
 			});
 		});
 
@@ -41,9 +41,9 @@ block content
 						td(class='col-sm-2')= game.created_at
 						td(class='col-sm-2')= game.game_type.name						
 						td(class='col-sm-1')
-							each player in game.players
-								div(style='margin-bottom: 5px;')
-									span(class='label label-info' style='line-height: inherit;')=player.name
+							each player in players
+								span(class='btn btn-primary' style='margin-bottom: 5px;')=player.name
+									span(class='badge pull-right' style='margin-top: 2px;')=player.wins
 						if game.is_finished
 							td(class='col-sm-1')
 								div: span(class='label label-success' style='line-height: inherit;')=players[game.winner_id].name
@@ -51,4 +51,4 @@ block content
 							td(class='col-sm-2')
 						td(class='col-sm-2')
 							if !game.is_finished
-								button(type='button' id='continueGameButton' data-match=game.current_match_id class='btn btn-primary btn-block btn-continue-game') Continue
+								button(type='button' id='continueGameButton' data-game=game.id data-match=game.current_match_id class='btn btn-primary btn-block btn-continue-game') Continue
