--- a/views/games.pug
+++ b/views/games.pug
@@ -16,6 +16,9 @@ block scripts
 			$('.btn-continue-game').click(function () {
 				location.href = '/game/' + $(this).data('game') + '/match/' + $(this).data('match');
 			});
+			$('.btn-view-results').click(function() {
+				location.href = '/match/' + $(this).closest('tr').find('th').text() + '/results';
+			});			
 		});
 
 block content
@@ -25,7 +28,7 @@ block content
 
 	// TODO Add pagination to this table to limit number of matches displayed
 	div(class='table-responsive')
-		table(class='table table-striped table-bordered' id='matches_list_table')
+		table(class='table table-striped table-bordered' id='games_list_table')
 			thead
 				tr
 					th(hidden=true)
@@ -38,17 +41,19 @@ block content
 				each game in games
 					tr
 						th(hidden='true' scope='row')= game.id
-						td(class='col-sm-2')= game.created_at
+						td(class='col-sm-2')= game.created_at.toISOString()
 						td(class='col-sm-2')= game.game_type.name						
 						td(class='col-sm-1')
-							each player in players
-								span(class='label label-primary' style='margin-bottom: 5px;')=player.name + ' (' + player.wins + ')'
+							each player in game.players
+								span(class='label label-primary' style='margin-bottom: 5px;')=player.name + ' (' + player.legs_won + ')'
 									//span(class='badge pull-right' style='margin-top: 2px;')=player.wins
 						if game.is_finished
 							td(class='col-sm-1')
-								div: span(class='label label-success' style='line-height: inherit;')=players[game.winner_id].name
+								div: span(class='label label-success' style='line-height: inherit;')=game.players[game.winner_id].name
 						else
 							td(class='col-sm-2')
 						td(class='col-sm-2')
 							if !game.is_finished
 								button(type='button' id='continueGameButton' data-game=game.id data-match=game.current_match_id class='btn btn-primary btn-block btn-continue-game') Continue
+							else
+								button(type='button' class='btn btn-primary btn-block btn-view-results') View								
