--- a/views/matches.pug
+++ b/views/matches.pug
@@ -26,7 +26,6 @@ block content
 	p.
 		Overview over all played matches
 
-	// TODO Add pagination to this table to limit number of matches displayed
 	div(class='table-responsive')
 		table(class='table table-striped table-bordered' id='matches_list_table')
 			thead
@@ -43,8 +42,8 @@ block content
 				each match in matches
 					tr
 						th(hidden='true' scope='row')= match.id
-						td(class='col-sm-2')= match.created_at
-						td(class='col-sm-2')= match.end_time === undefined ? '' : match.end_time
+						td(class='col-sm-2')= match.created_at.toISOString()
+						td(class='col-sm-2')= match.end_time === undefined ? '' : match.end_time.toISOString()
 						td(class='col-sm-2 txt-center')= match.starting_score
 						if match.is_finished
 							td(class='col-sm-1')
