Some styling changes and checking if games are finished

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -10,6 +10,11 @@ a:hover {
     text-align: center;
 }
 
+/* CSS Related to games page */
+#games_list_table span {
+    display: block;
+}
+
 /* CSS Related to matches page */
 #matches_list_table span {
     display: block;
