Removed the link to matches page

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,7 +20,7 @@ html
 				div(class='container-fluid')
 					div(class='navbar-header')
 						button(type='button' class='navbar-toggle collapsed' data-toggle='collapse' data-target='#navbar' aria-expanded='false' aria-controls='navbar')
-							span(class='sr-only') Toggle navigation</span>
+							span(class='sr-only') Toggle navigation
 							span(class='icon-bar')
 							span(class='icon-bar')
 							span(class='icon-bar')
@@ -30,7 +30,7 @@ html
 							li(class='active')
 								li: a(href='/player/list') Players
 								li: a(href='/cake/owes') Owes
-								li: a(href='/match/list') Matches
+								// li: a(href='/match/list') Matches
 								li: a(href='/game/list') Games
 			div(class='jumbotron')
 				block content
