--- a/views/match_socket.pug
+++ b/views/match_socket.pug
@@ -9,7 +9,7 @@ block scripts
             $('[data-toggle="popover"]').popover();
 
             var matchId = $('#submitScoreButton').data('match-id');
-            var socket = io('http://10.12.100.66:3000/match/' + matchId);
+            var socket = io('http://' + window.location.hostname + ':3000/match/' + matchId);
             socket.on('connect', function(data) {
                 socket.emit('join', 'Client Conneting');
             });
