--- a/views/games.pug
+++ b/views/games.pug
@@ -17,8 +17,8 @@ block scripts
 				location.href = '/game/' + $(this).data('game');
 			});
 			$('.btn-view-results').click(function() {
-				location.href = '/match/' + $(this).closest('tr').find('th').text() + '/results';
-			});			
+				location.href = '/game/' + $(this).closest('tr').find('th').text() + '/results';
+			});
 		});
 
 block content
@@ -26,7 +26,6 @@ block content
 	p.
 		Overview over all played games
 
-	// TODO Add pagination to this table to limit number of matches displayed
 	div(class='table-responsive')
 		table(class='table table-striped table-bordered' id='games_list_table')
 			thead
